--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,297 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root {
+  --white: #fff;
+  --black: #000;
+  --lightBlack: #2c2c2c;
+  --main: #ff6e68;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  font-family: "Open Sans", sans-serif;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
+  width: 1300px;
+  margin: 0 auto;
+}
+.nav {
+  width: 100%;
+  height: 80px;
+  box-shadow: 0 5px 20px 2px rgba(0, 0, 0, 0.1);
+  position: fixed;
+  top: 0;
+  background: var(--white);
+  z-index: 1;
+}
+.nav__container {
+  width: 100%;
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  height: 70px;
+  justify-content: space-between;
+}
+.nav__left img {
+  width: 100px;
+  margin-top: 10px;
+  margin-left: 40px;
+}
+.header {
+  background: url("./images/pexels-karolina-grabowska-5632346.jpg");
+  width: 100%;
+  height: 100vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+a {
+  text-decoration: none;
+}
+.cart-icon {
+  color: var(--main);
+  font-size: 22px;
+}
+.basket {
+  position: relative;
+}
+.basket span {
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  position: absolute;
+  right: -15px;
+  top: -10px;
+  width: 25px;
+  height: 25px;
+  background: var(--lightBlack);
+  border-radius: 50%;
+  color: var(--white);
+  font-size: 12px;
+}
+.row {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+}
+.col-2 {
+  width: 16.33333333333333%;
+}
+.col-3 {
+  width: 25%;
+}
+.col-6 {
+  width: 50%;
+}
+.col-9 {
+  width: 75%;
+}
+.mt-100 {
+  margin-top: 100px;
+}
+.product {
+  padding: 25px;
+  width: 100%;
+  overflow: hidden;
+}
+.product__img {
+  width: 100%;
+  height: 350px;
+  overflow: hidden;
+}
+.product__img img {
+  width: 100%;
+  height: 100%;
+  transition: all 0.5s linear;
+}
+.product__img img:hover {
+  transform: scale(1.2);
 }
 
-.App-link {
-  color: #61dafb;
+.product__name {
+  margin: 10px 0;
+  text-transform: capitalize;
+  color: #707070;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.product__discount__price {
+  text-align: right;
+  font-size: 18px;
+}
+.product__price .discount {
+  color: silver;
+  font-weight: 400;
+  font-size: 13px;
+}
+.actualPrice {
+  text-decoration: line-through;
+  font-size: 18px;
+}
+.details__image {
+  width: 100%;
+  height: auto;
+  padding-right: 30px;
+}
+.details__image img {
+  width: 100%;
+  height: auto;
+  margin-bottom: 25px;
+}
+.details__name {
+  font-size: 28px;
+  color: #2c2c2c;
+  font-weight: 400;
+  text-transform: capitalize;
+}
+.details__prices {
+  margin: 10px 0;
+}
+.details__actaul {
+  text-decoration: line-through;
+  font-size: 20px;
+}
+.details__discount {
+  margin-left: 20px;
+  font-size: 20px;
+}
+.details__incDec {
+  display: flex;
+}
+.dec,
+.inc,
+.quantity {
+  width: 60px;
+  height: 60px;
+  border: 1px solid silver;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.quantity {
+  border-left: none;
+  border-right: none;
+}
+.inc,
+.dec {
+  cursor: pointer;
+}
+.btn-default {
+  margin-left: 10px;
+  width: 100%;
+  border: none;
+  background: var(--main);
+  color: var(--white);
+  outline: none;
+  font-size: 18px;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+.details__p {
+  margin-top: 15px;
+}
+.details__p h4 {
+  font-weight: 600;
+  margin-bottom: 10px;
+  font-size: 18px;
+}
+/* cart */
+.cart {
+  margin-top: 100px;
+}
+.cart h3 {
+  font-weight: 400;
+}
+.cart__heading {
+  background: #f4f6f8;
+  padding: 10px;
+}
+.cart__image img {
+  width: 100px;
+  height: 100px;
+  object-fit: contain;
+}
+.verticalAlign {
+  align-items: center;
+  margin-top: 10px;
+}
+.text-center {
+  text-align: center;
+}
+.cart__remove {
+  cursor: pointer;
+}
+.summary {
+  padding-left: 10px;
+}
+.summary__heading {
+  background: #f4f6f8;
+  padding: 10px;
+}
+.summary__details {
+  background: var(--main);
+  color: var(--white);
+  padding: 15px;
+}
+.mb-10 {
+  margin-bottom: 10px;
+}
+.checkout {
+  border: none;
+  cursor: pointer;
+  outline: none;
+  background: var(--white);
+  color: var(--main);
+  width: 100%;
+  padding: 12px 5px;
+  font-size: 17px;
+  text-transform: uppercase;
+}
+@media (max-width: 765px) {
+  .container {
+    width: 100%;
+    padding: 0 30px;
   }
-  to {
-    transform: rotate(360deg);
+  .col-3 {
+    width: 50%;
+  }
+  .col-2 {
+    width: 100%;
+    text-align: center;
+    padding: 5px;
+  }
+  .col-6 {
+    width: 100%;
+  }
+  .col-9 {
+    width: 100%;
+  }
+  .details__image {
+    padding-right: 0;
+  }
+  .cart__heading {
+    display: none;
+  }
+  .summary-col {
+    width: 100% !important;
+  }
+  .cart__incDec {
+    display: flex;
+    justify-content: center;
+  }
+  .cart h3 {
+    text-align: center;
+  }
+}
+@media (max-width: 400px) {
+  .col-3 {
+    width: 100%;
+  }
+  .col-2 {
+    width: 100%;
+  }
+  .col-6 {
+    width: 100%;
+  }
+  .details__image {
+    padding-right: 0;
   }
 }
