--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   --white: #fff;
   --black: #000;
   --lightBlack: #2c2c2c;
-  --main: #ff6e68;
+  --main: #00ccaa;
 }
 body {
   font-family: "Open Sans", sans-serif;
